--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,7 @@
 html,
 body {
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   overflow: hidden;
   background-color: #eee;
   font-family: "Roboto", sans-serif;
@@ -28,6 +28,7 @@ img {
   overflow: hidden;
   margin-left: auto;
 }
+
 .page-content header,
 .page-content .description {
   padding: 1em 2em;
@@ -165,4 +166,20 @@ p {
   left: 12%;
   opacity: 0;
   z-index: 2;
+}
+@media screen and (max-width: 480px) {
+  .page-content {
+    flex-direction: column;
+  }
+  .page-content main {
+    min-height: 60vh;
+    width: 100vw;
+  }
+  .page-content .description {
+    max-height: 40vh;
+    width: auto;
+  }
+  .description img {
+    width: 100px;
+  }
 }
