--- a/assets/style.css
+++ b/assets/style.css
@@ -16,6 +16,7 @@ img {
   margin-right: 0.2em;
 }
 .page-content {
+  background-color: rgb(61, 59, 59);
   display: flex;
   position: relative;
   width: 100%;
