--- a/assets/style.css
+++ b/assets/style.css
@@ -17,13 +17,20 @@ img {
 }
 .page-content {
   background-color: rgb(58, 58, 95);
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   position: relative;
   width: 100%;
   height: 100%;
 }
 .page-content main {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
   width: 65vw;
   overflow: hidden;
@@ -33,14 +40,25 @@ img {
 .page-content header,
 .page-content .description {
   padding: 1em 2em;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
   align-items: flex-start;
 }
 .page-content header {
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
 }
 .page-content .description {
+  -webkit-box-pack: start;
+  -ms-flex-pack: start;
   justify-content: start;
 }
 .slider-paths .path {
@@ -50,6 +68,7 @@ img {
   top: 0;
   right: 0;
   z-index: 1000;
+  -webkit-transform: translateX(-100vw);
   transform: translateX(-100vw);
 }
 .slider-paths .path:first {
@@ -77,11 +96,19 @@ img {
   margin: 1em 0;
 }
 .flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 .flex * {
+  -webkit-box-flex: 1;
+  -ms-flex: 1 1 auto;
   flex: 1 1 auto;
 }
 h1 {
@@ -108,6 +135,8 @@ p {
 }
 .qr-code {
   min-width: 10vw;
+  -webkit-box-ordinal-group: 2;
+  -ms-flex-order: 1;
   order: 1;
 }
 .main-infos {
@@ -117,6 +146,8 @@ p {
   margin-top: auto;
 }
 .image-slides {
+  -webkit-box-flex: 1;
+  -ms-flex: 1 1 auto;
   flex: 1 1 auto;
   position: relative;
   overflow: hidden;
@@ -124,6 +155,7 @@ p {
   display: block;
 }
 .image-slides img {
+  -o-object-fit: cover;
   object-fit: cover;
   width: 100%;
   height: 100%;
@@ -159,6 +191,7 @@ p {
 .loader div {
   background-color: white;
   height: 100vh;
+  -webkit-transition: background-color 1s;
   transition: background-color 1s;
 }
 .loader h1 {
@@ -171,6 +204,9 @@ p {
 }
 @media screen and (max-width: 480px) {
   .page-content {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
   }
   .page-content main {
